--- a/frontend/src/components/DonateButton/DonateButton.css
+++ b/frontend/src/components/DonateButton/DonateButton.css
@@ -1,5 +1,6 @@
 .donate-button-container {
   position: relative;
+  display: inline-block;
 }
 
 .donate-button {
